ill-formed/fixtures/SimplePrimitive.primitive
Primitive SimplePrimitive(Set mySet) {
    Set field = mySet;

    Int f();
}
